[package]
name = "stm32f107-demo"
version = "0.1.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.6.0"
#nb = "0.1.2"
cortex-m-rt = "0.6.8"
embedded-hal = "0.2.4"
panic-rtt-target = { version = "0.1", features = ["cortex-m"] }
rtt-target = { version = "0.2.0", features = ["cortex-m"] }
stm32f1xx-hal = { version = "0.6.1", features = ["stm32f107"] }
vl53l1 = { path = "../../lib/vl53l1" }

[profile.release]
debug = true
lto = true
codegen-units = 1
incremental = false
opt-level = "s"
