[package]
name = "vl53l1-reg"
version = "0.1.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
description = "A crate for low-level access to the registers on the VL53L1X."
readme = "../../README.md"
keywords = ["ST", "ToF", "sensor", "VL53L1X", "driver"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mitchmindtree/vl53l1.git"
homepage = "https://github.com/mitchmindtree/vl53l1"
edition = "2018"

[dependencies]
bitfield = "0.14"
embedded-hal = "0.2.4"
